--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -10,48 +10,69 @@
         padding: 20px;
         max-width: 600px;
         margin: auto;
-        background: #f4f4f4;
+        background-color: #f0f0f0;
       }
+
+      h1,
+      h3 {
+        color: #333;
+      }
+
       #quoteDisplay {
         margin: 20px 0;
         padding: 15px;
         background-color: #fff;
         border-left: 5px solid #4caf50;
+        font-style: italic;
       }
+
       input,
       select,
       button {
-        padding: 7px;
+        padding: 8px;
         margin-top: 10px;
-        margin-right: 5px;
+        margin-right: 10px;
+        font-size: 16px;
+      }
+
+      button {
+        cursor: pointer;
+        background-color: #4caf50;
+        color: white;
+        border: none;
+      }
+
+      button:hover {
+        background-color: #45a049;
+      }
+
+      #addQuoteFormContainer {
+        margin-top: 30px;
+        background-color: #fff;
+        padding: 15px;
+        border-left: 5px solid #2196f3;
       }
     </style>
   </head>
   <body>
     <h1>Dynamic Quote Generator</h1>
 
-    <!-- Select category -->
+    <!-- Category selection -->
     <div>
       <label for="categorySelect">Choose category:</label>
       <select id="categorySelect"></select>
     </div>
 
     <!-- Quote display -->
-    <div id="quoteDisplay">Click "Show New Quote" to begin.</div>
+    <div id="quoteDisplay">
+      Click "Show New Quote" to see something inspiring!
+    </div>
     <button id="newQuote">Show New Quote</button>
 
-    <!-- Add new quote -->
-    <div>
-      <h3>Add a new quote</h3>
-      <input id="newQuoteText" type="text" placeholder="Enter a new quote" />
-      <input
-        id="newQuoteCategory"
-        type="text"
-        placeholder="Enter quote category"
-      />
-      <button onclick="addQuote()">Add Quote</button>
-    </div>
+    <!-- Form placeholder (created with JS) -->
+    <div id="addQuoteFormContainer"></div>
 
+    <!-- Link to external JS -->
     <script src="script.js"></script>
   </body>
 </html>
