--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -18,7 +18,27 @@
         color: #333;
       }
 
-      #quoteDisplay {
+      <!--
+        Category
+        Filter
+        Dropdown
+        --
+        > <div
+        > <label
+        for="categoryFilter"
+        > Filter
+        by
+        Category:</label
+        > <select
+        id="categoryFilter"
+        onchange="filterQuotes()"
+        > <option
+        value="all"
+        > All
+        Categories</option
+        > </select
+        > </div
+        > #quoteDisplay {
         margin: 20px 0;
         padding: 15px;
         background-color: #fff;
