Building a dynamic content generator with advanced DOM manipulation

--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -59,7 +59,7 @@
     <h1>Dynamic Quote Generator</h1>
 
     <!-- Sync Button -->
-    <button onclick="fetchQuotesFromServer()">🔄 Sync Quotes Now</button>
+    <button onclick="syncQuotes()">🔄 Sync Quotes Now</button>
 
     <!-- Export / Import -->
     <div style="margin-top: 20px">
